Tue, 27 Feb 2007 21:11:47 +0100 <thp@perli.net>
        * data/po/es.po: Updated Spanish translation by
          José Luis Fustel (dr_psy terra.es)
        * bin/gpodder: Version + svn release date push

Sat, 24 Feb 2007 13:02:51 +0100 <thp@perli.net>
        * src/gpodder/gpodder.py: Scroll down to last position after 
          starting a download in the available podcasts tab
        * bin/gpodder: Version + svn release date push
        * TODO: Updated TODO list

Mon,  5 Feb 2007 17:47:07 +0100 <thp@perli.net>
        * src/gpodder/libgpodder.py: Applied patch from Mike Coulson 
          (miketcoulson gmail com) to fix lexists fallback bug related to 
          late logger import - thanks!
        * AUTHORS: Added Mike Coulson to list of patch writers
        * bin/gpodder: Pushed version + svn release date

Sun,  4 Feb 2007 10:38:27 +0100 <thp@perli.net>
        * src/gpodder/liblogger.py: Write log output to stdout again
        * bin/gpodder: Version is now a "+svn" version again as we're 
          slowly progressing towards 0.9.0
        * data/po/pt.po: Updated Portuguese (pt) translation, thanks to
          Joel Calado (joelcalado gmail.com) who did the translation

Sat,  3 Feb 2007 11:59:34 +0100 <thp@perli.net>
        * src/gpodder/liblogger.py: Don't write log output to stdout 
          because we're doing a release today :)

Sat,  3 Feb 2007 11:55:37 +0100 <thp@perli.net>
        * doc/man/gpodder.1: Updated manpage for 0.8.9 release
        * bin/gpodder: Version + date for 0.8.9 release
        * README: 0.8.9 release info

Sat,  3 Feb 2007 11:46:49 +0100 <thp@perli.net>
        * src/gpodder/libwget.py: Add has_items() to downloadStatusManager
        * src/gpodder/libgpodder.py: Make deleting partial downloads optional
        * src/gpodder/gpodder.py: Only ask gPodderLib to delete partially 
          downloaded files when our downloadStatusManager does not have any 
          downloads going at the moment (bugfix!)
