@@ -1,3 +1,9 @@
+Sat,  3 Mar 2007 14:08:18 +0100 <thp@perli.net>
+        * src/gpodder/libgpodder.py: Added can_write_directory() function
+        * src/gpodder/libipodsync.py: Add support for MP3 player cleanup
+        * src/gpodder/gpodder.py: Add support for MP3 player cleanup
+        * bin/gpodder: version + svn release date push
+
 Tue, 27 Feb 2007 21:11:47 +0100 <thp@perli.net>
         * data/po/es.po: Updated Spanish translation by
           José Luis Fustel (dr_psy terra.es)
